--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
     "mapbox-gl": "^2.15.0",
     "maplibre-gl": "^3.3.0",
